--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "netlify-cli": "^2.69.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
